add test for barcode generation, and modify the version of barcode dependency which is used, because the upstream version is buggy

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,15 @@
 {
+
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/hephistocles/barcode"
+        }
+    ],
     "require-dev": {
         "phpunit/phpunit": "*"
+    },
+    "require": {
+    	"dinesh/barcode": "dev-hephistocles"
     }
 }
