--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "phpunit/phpunit": "*"
     },
     "require": {
+	"tecnick.com/tcpdf": "dev-master",
     	"dinesh/barcode": "dev-hephistocles"
     }
 }
